Swagger docs phase 2
